--- a/gsc-portal_V2/backend/package.json
+++ b/gsc-portal_V2/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^146.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "passport": "^0.7.0",
