--- a/gsc-portal_V5/backend/package.json
+++ b/gsc-portal_V5/backend/package.json
@@ -21,9 +21,10 @@
     "googleapis": "^146.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.13.0",
+    "mysql2": "^3.14.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "sequelize": "^6.37.7",
     "socket.io": "^4.8.1"
   },
   "type": "module"
