--- a/gsc-portal_V5/frontend/package.json
+++ b/gsc-portal_V5/frontend/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/vue3": "^6.1.15",
     "axios": "^1.8.1",
     "googleapis": "^148.0.0",
+    "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "pinia": "^3.0.1",
     "socket.io-client": "^4.8.1",
