--- a/gsc-portal_V5/frontend/package.json
+++ b/gsc-portal_V5/frontend/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "googleapis": "^148.0.0",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
